--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
@@ -8,7 +8,7 @@
 		padding: 0 $sitepadding-small;
 	}
 	.press-details span:last-child {
-		font-weight: bold;
+		// font-weight: bold;
 	}
 	.press-details span:not(:last-child) {
 		border-right: 1px solid #cccccc;
