Fixing font styles in accordions.

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -227,6 +227,14 @@ ul.accordion {
   .accordion-content {
     color: initial;
     border: none;
+
+    font-family: "Brown-Pro-Light", AdobeBlank;
+
+    strong {
+        font-weight: normal;
+        font-family: $body-font-family;
+    }
+
   }
 }
 
