--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -30,7 +30,7 @@ body.post-type-archive-events {
 
 	.artist-categories li {
 		float: none !important;
-		display: inline;
+		display: inline-block;
 		text-align: center;
 	}
 	.artist-categories {
@@ -134,7 +134,7 @@ body.post-type-archive-events {
 		color: $white;
 		float: left;
 		//margin-right: ($sitepadding / 2);
-		margin-bottom: ($sitepadding / 2);
+		margin-bottom: 2px;
 		text-transform: uppercase;
 		letter-spacing: 1px;
 		a {
@@ -256,8 +256,21 @@ body.post-type-archive-events {
 
 //Styles for when instrumentalists term is clicked. Move row up to allow children room underneath
 .term-instrumentalists {
-	.artist-categories {
-		bottom: 1em;
+	.artist-filtering-block {
+
+		.filter-area {
+			position: absolute;
+			bottom: 0;			
+    		-webkit-transform: translateY(-75%);
+    		-ms-transform: translateY(-75%);
+    		transform: translateY(-75%);
+		}
+
+		.artist-categories {
+			bottom: 0;
+			@include center(x);
+		}
+
 	}
 }
 
