JS fix for singers menu.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -255,6 +255,7 @@ body.post-type-archive-events {
 }
 
 //Styles for when instrumentalists term is clicked. Move row up to allow children room underneath
+.term-singers,
 .term-instrumentalists {
 	.artist-filtering-block {
 
