--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -26,8 +26,9 @@
 	}
 	
 	.magazine-item-thumb {
-	    height: 200px;
+	    height: 300px;
 	    @include full-bg;
+	    background-position: 50% 33%;
 	}
 	
 	.magazine-category {
