--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -261,7 +261,8 @@ body.post-type-archive-events {
 
 		.filter-area {
 			position: absolute;
-			bottom: 0;			
+			bottom: 0;
+			left: 0;
     		-webkit-transform: translateY(-75%);
     		-ms-transform: translateY(-75%);
     		transform: translateY(-75%);
