--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10060,6 +10060,7 @@ body.post-type-archive-events div#archive {
 .term-instrumentalists .artist-filtering-block .filter-area {
   position: absolute;
   bottom: 0;
+  left: 0;
   -webkit-transform: translateY(-75%);
   -ms-transform: translateY(-75%);
   transform: translateY(-75%); }
