--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9404,6 +9404,11 @@ svg.red-arrow {
 span.bold {
   font-weight: bold; }
 
+.row-divider {
+  display: none; }
+  .row-divider.show {
+    display: block; }
+
 /* Complete Fonts */
 @font-face {
   font-family: "Brown-Pro-Regular";
@@ -17287,7 +17292,7 @@ body.single.single-artists .artist-header.container, body.single.single-clients 
   height: auto;
   position: relative; }
   body.single.single-artists .artist-header.container .artist-details-container, body.single.single-clients .artist-header.container .artist-details-container, body.single-touring-partners .artist-header.container .artist-details-container {
-    padding: 12.5px 0; }
+    padding: 12.5px; }
     body.single.single-artists .artist-header.container .artist-details-container .website, body.single.single-clients .artist-header.container .artist-details-container .website, body.single-touring-partners .artist-header.container .artist-details-container .website {
       font-weight: bold; }
     body.single.single-artists .artist-header.container .artist-details-container i, body.single.single-clients .artist-header.container .artist-details-container i, body.single-touring-partners .artist-header.container .artist-details-container i {
@@ -17349,7 +17354,7 @@ div.side-bar-text-area {
 
 @media screen and (min-width: 40em) {
   body.single.single-artists .artist-header.container .artist-details-area .artist-details-container, body.single.single-clients .artist-header.container .artist-details-area .artist-details-container, body.single-touring-partners .artist-header.container .artist-details-area .artist-details-container {
-    padding: 25px 25px 25px 0; }
+    padding: 25px; }
   body.single.single-artists .artist-header.container, body.single.single-clients .artist-header.container, body.single-touring-partners .artist-header.container {
     height: 450px; } }
 
