Toggle for Video/Audio/Schedule on artists pages.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -159,6 +159,11 @@ div#video-audio {
 
 .artist-video-area {
 	margin-bottom: $sitepadding;
+
+	p object {
+		max-width: 100%;
+	}
+
 	.row.large-video-row {
 	    margin: 0;
 	    margin-left: 0;
