Toggle for Video/Audio/Schedule/Green Room on artists pages. Removing drop shadow from people pages.

--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9401,6 +9401,11 @@ svg.red-arrow {
   position: relative;
   top: 4px; }
 
+.toggle-hidden.active svg.red-arrow {
+  -ms-transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg); }
+
 span.bold {
   font-weight: bold; }
 
