--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -222,6 +222,13 @@ svg.red-arrow {
     position: relative;
     top: 4px;
 }
+.toggle-hidden.active {
+    svg.red-arrow {
+        -ms-transform: rotate(90deg);
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
+}
 
 span.bold {
 	font-weight: bold;
