--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9750,9 +9750,9 @@ body.search-bar-is-visible form#searchform {
     display: none; }
 
 ul.ui-autocomplete {
-  margin: 0 0 0 -38px;
+  margin: 0;
   opacity: 0.9;
-  width: 50vw !important;
+  width: calc(50vw + 77px) !important;
   left: 50% !important;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
