--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -202,7 +202,7 @@ ul.accordion {
   li.accordion-item {
     .accordion-title {
         display: block;
-        padding: 0;
+        padding: 0 1.5rem;
         //line-height: 1;
         font-size: inherit;
         color: inherit;
@@ -225,10 +225,10 @@ ul.accordion {
     border-bottom: none;
   }
   .accordion-content {
-    color: initial;
     border: none;
-
+    padding: 1.5rem;
     font-family: "Brown-Pro-Light", AdobeBlank;
+    color: initial;
 
     strong {
         font-weight: normal;
