Adding overflow: hidden; to row.

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -234,6 +234,10 @@ span.bold {
 	font-weight: bold;
 }
 
+.row {
+    overflow: hidden;
+}
+
 //hidden content toggle rows
 .row-divider {
     display: none;
