(Temp?) Fix for accordion toggle.

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -258,6 +258,7 @@ body.post-type-archive-events {
 }
 
 .event-listing-details {
+    padding: 0 1.5rem;
     font-size: 19px;
     .side-bar-artist-details {
         // line-height: 30px;
