--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -18431,6 +18431,7 @@ ul.accordion {
   border-bottom: none; }
 
 .event-listing-details {
+  padding: 0 1.5rem;
   font-size: 19px; }
 
 span.more-info {
