(Temp?) Fix for accordion toggle --> removing padding which was added as this is unnecessary now.

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -202,7 +202,7 @@ ul.accordion {
   li.accordion-item {
     .accordion-title {
         display: block;
-        padding: 0 1.5rem;
+        padding: 0;
         //line-height: 1;
         font-size: inherit;
         color: inherit;
