--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -15791,6 +15791,7 @@ div.padded-text {
   border-bottom: 0;
   -webkit-background-size: cover;
   background-size: cover;
+  background-position: 50% 30%;
   -webkit-box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 11px 48px -5px rgba(0, 0, 0, 0.75);
   margin: 25px; }
