Repositioning main (background) image on artist pages.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
@@ -163,6 +163,7 @@ body.single-touring-partners {
 
 .artist-header-thumb {
 	@include full-bg;
+	background-position: 50% 33%;
 	height: 450px;
 	width: 70%;
 	//position: relative;
