Adding overflow-x: hidden; to body.

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -1,5 +1,9 @@
 //General styles throughout site
 
+body {
+    overflow-x: hidden;
+}
+
 // div#page-full-width {
 //     max-width: 57.375rem;
 //     margin: 0 auto;
