Adding important to font colour on navbar sub-menus.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -41,7 +41,7 @@ header#masthead {
 		background: $red;
 		li a {
 			width: 100%;
-			color: white;
+			color: #fff !important;
 		}
 	}
 	//mobile-nav styles
