Adding more space below slider on smaller-sized screens.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
@@ -27,7 +27,7 @@ body.page {
 		}
 		.center-image {
 			height: 69vh;
-			margin: 1em 1em;
+			margin: 1em 1em 2em;
 			@include full-bg;
 			background-position: 50% 33%;
 			position: relative;
