Adding height to magazine boxes - just on people page.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -12,7 +12,13 @@
 
 	.magazine-item-container {
 		padding: 0 1em 0;
-		min-height: 170px;
+		min-height: 132px;
+
+		&.staff-header {
+			min-height: 170px;
+			padding-top: 1em;
+		}
+
 		.read-more {
 			font-weight: bold;
 			color: #d7d4c5;
