--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -15,8 +15,9 @@
 		min-height: 132px;
 
 		&.staff-header {
-			min-height: 170px;
-			padding-top: 1em;
+    		min-height: 170px;
+    		padding: 0.5em 1em;
+    		box-sizing: content-box;
 		}
 
 		.read-more {
