Adding height to magazine boxes for artists.

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_temp.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_temp.scss
@@ -2,7 +2,8 @@
 
 .artists {	
 	// temp, just for dev
-	min-height: 350px;
+	min-height: 380px;
+	margin-bottom: 0 !important;
 }
 
 // .artist-filtering-block  {
