--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -23,6 +23,13 @@ header#masthead {
 	    //padding-left: 1em;
 	    @include center(x);
 	    z-index: 10;
+
+	    @include breakpoint(large up){
+	    	margin-left: 1.666666rem;
+	    }
+	    @media screen and (min-width: 1175px) {
+			margin-left: 0;
+	    }
 	}
 	.top-bar .menu li {
 		white-space: nowrap;
