Adding image gallery accordion styles.

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -113,6 +113,7 @@
 @import "modules/discography-accordion";
 @import "modules/animate";
 @import "modules/loaders";
+@import "modules/image-gallery-accordion";
 
 
 // Components
