--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -231,7 +231,7 @@ a.view-link:hover, .side-bar-artist-name:hover, a.tours-details-link:hover {
     //line-height: 1;
     font-family: "Brown-Pro-Light", AdobeBlank;
     a.view-link {
-        color: initial;
+        color: inherit;
     }
 }
 
