--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-quicklook-content.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-quicklook-content.scss
@@ -35,7 +35,7 @@
 	a.button {
 	    background: transparent;
 	    border: 1px solid gray;
-	    color: initial;
+	    color: inherit;
 	    font-family: $body-font-family;
 	    padding: 0.85em $sitepadding;
 	}
@@ -51,11 +51,11 @@ ul.quick-look-links {
 		padding: 5px 0;
 		span, a {
 			vertical-align: top;
-			color: initial;
+			color: inherit;
 		}
 	}
 	 a.share-button {
-		color: initial;
+		color: inherit;
 	}
 }
 
