--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -115,6 +115,7 @@
     transition: 0.5s;
     font-size: 1.1rem;
     line-height: 1;
+    outline: none;
 
     &:hover:not(.button) {
       background-color: #2a2a2a;
